pbc_contract_codegen/tests/action/fail/zk/arg_instead_of_zk_state_init.rs
use pbc_contract_codegen::init;

pub fn main() {}

#[init]
fn init(
    _context: pbc_contract_common::context::ContractContext,
    arg1: u64,
) -> u64 {
    arg1
}
